Correct games navbar on Firefox.

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -115,7 +115,7 @@ h1 {
     float: left;
     background-color: $primary-light;
     padding: 0.5rem 1rem 0.5rem 1rem;
-    height: min-content;
+    height: 1.5rem;
 }
 .header ul>li, .top-bar ul>li {
     border-left: 0.1rem solid $primary-very-light;    
